fix overflow on selected sleeve

--- a/src/entities/actor/components/character-views/components/resleeve/character-view-resleeve.scss
+++ b/src/entities/actor/components/character-views/components/resleeve/character-view-resleeve.scss
@@ -44,6 +44,7 @@ li[divider] {
   margin-right: 1ch;
 }
 
-.current-sleeve {
+.current-sleeve,
+.selected-sleeve {
   max-width: 400px;
 }
